--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import "normalize.css";
+@import 'normalize.css';
 
 body {
   margin: 0;
@@ -11,7 +11,7 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+    monospace;
 }
 
 *,
