--- a/src/components/DomainsList/DomainsList.module.scss
+++ b/src/components/DomainsList/DomainsList.module.scss
@@ -13,29 +13,11 @@
     margin: 0 auto;
   }
 
-  &Loader {
+  &Observed {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    transform-origin: left top;
-    width: 71px;
-    height: 32px;
-    background-size: 100% 100%;
-    background-image: url('~/public/images/logo.svg');
-    animation-name: spiner;
-    animation-iteration-count: infinite;
-    animation-duration: 1.5s;
-    animation-timing-function: linear;
+    inset: auto 0 0 0;
+    height: 70px;
+    pointer-events: none;
   }
 }
 
-@keyframes spiner {
-  50% {
-    scale: 1.2;
-  }
-
-  to {
-    scale: 1;
-  }
-}
