--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  padding: 24px;
-  min-height: 100vh;
+    padding: 24px 24px 70px;
+    min-height: 100vh;
 
-  @supports (min-height: 100dvh) {
-    min-height: 100dvh;
-  }
+    @supports (min-height: 100dvh) {
+        min-height: 100dvh;
+    }
 }
