--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,24 @@
 @import 'normalize.css';
 
 body {
-  margin: 0;
-  padding: 0;
-  /*background-color: rgb(9, 15, 30);*/
-  font-family: Inter, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 input {
-  appearance: none;
+    appearance: none;
 }
