--- a/src/components/DomainsList/DomainsList.module.scss
+++ b/src/components/DomainsList/DomainsList.module.scss
@@ -29,6 +29,19 @@
     margin: 0 auto;
   }
 
+  &TableContainer {
+    &::-webkit-scrollbar {
+      height: 8px;
+      width: 8px;
+      background-color: #f9f9fd;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: gray;
+    }
+  }
+
   &Wrapper {
     position: relative;
   }
